--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ assembleDebug:
     - ./gradlew :app:appDistributionUploadRelease
 #    - ./script/pgyer_upload.sh "${CI_PROJECT_DIR}/app/build/outputs/apk/release/app-release.apk" $PG_API_KEY $PG_APP_KEY ${CI_PROJECT_DIR}
     - ./gradlew reportMappingDebug  &&  ./gradlew reportSoDebug
-    - ./gradlew counter
+    - ./gradlew fileCounter
   artifacts:
     paths:
       - app/build/outputs/
