--- a/components/home-module/main/src/main/AndroidManifest.xml
+++ b/components/home-module/main/src/main/AndroidManifest.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     package="com.jamesfchen.home">
 
     <application
+        android:name="com.jamesfchen.main.HomeApp"
+        android:allowBackup="false"
         android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
+        tools:replace="android:name,android:allowBackup"
+        android:icon="@mipmap/ic_launcher"
         >
         <activity
             android:name="com.jamesfchen.myhome.splash.SplashActivity"
