--- a/script/base_module.gradle
+++ b/script/base_module.gradle
@@ -51,9 +51,9 @@ android {
         quiet true
         lintConfig project.file("$project.rootDir/lint.xml")
         htmlReport true
-        htmlOutput project.file("$project.rootDir/lint-report-${project.name}.html")
+//        htmlOutput project.file("$project.rootDir/lint-report-${project.name}.html")
         xmlReport true
-        xmlOutput project.file("$project.rootDir/lint-report-${project.name}.xml")
+//        xmlOutput project.file("$project.rootDir/lint-report-${project.name}.xml")
         warningsAsErrors true
         abortOnError false
 //                // Turns off checks for the issue IDs you specify.
