--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,24 @@
 apply from: "$rootDir.path/script/app_module.gradle"
 apply plugin: 'com.google.firebase.appdistribution'
+apply from: "${rootDir.path}/script/file_counter.gradle"
+counterConfig {
+    sea = 'all'
+}
+apply from: "${rootDir.path}/script/check_dangerous_api.gradle"
+checker {
+    filters = ['SafeConverts.java']
+    dangerousApis = [
+            "Color.parseColor",
+            "Integer.valueOf",
+            "Integer.parseInt",
+            "Long.parseLong",
+            "Long.valueOf",
+            "Float.valueOf",
+            "Float.parseFloat",
+            "Double.valueOf",
+            "Double.parseDouble"
+    ]
+}
 android {
     defaultConfig {
         resValue "string", "app_name", "spacecraft.app"
