--- a/components/home-module/main/build.gradle
+++ b/components/home-module/main/build.gradle
@@ -1,4 +1,23 @@
 apply from: "$rootDir.path/script/app_module.gradle"
+apply from: "${rootDir.path}/script/file_counter.gradle"
+counterConfig {
+    pickupModules=[':components:home-module:myhome']
+}
+apply from: "${rootDir.path}/script/check_dangerous_api.gradle"
+checker {
+    filters = ['SafeConverts.java']
+    dangerousApis = [
+            "Color.parseColor",
+            "Integer.valueOf",
+            "Integer.parseInt",
+            "Long.parseLong",
+            "Long.valueOf",
+            "Float.valueOf",
+            "Float.parseFloat",
+            "Double.valueOf",
+            "Double.parseDouble"
+    ]
+}
 android {
     defaultConfig {
         resValue "string", "app_name","home.app"
