--- a/script/base_module.gradle
+++ b/script/base_module.gradle
@@ -29,7 +29,7 @@ android {
     }
     buildFeatures {
         viewBinding true
-//        dataBinding true
+        dataBinding true
         compose true
     }
     composeOptions {
