--- a/.gitlab-ci-hotel.yml
+++ b/.gitlab-ci-hotel.yml
@@ -1,14 +1,30 @@
-hotelBuild:
+hotel-foundation-build:
   only:
-    - hotel
+    changes:
+      - components/hotel-module/foundation/**/*
   stage: build
   script:
-    - ./gradlew :components:hotel-module:main:build
-#    - ./gradlew reportMappingDebug  &&  ./gradlew reportSoDebug
+    - ./gradlew :components:hotel-module:foundation:build
 
-hotelDailyCheck:
+hotel-bundle1-build:
   only:
-    - hotel
+    changes:
+      - components/hotel-module/bundle1/**/*
+  stage: build
+  script:
+    - ./gradlew :components:hotel-module:bundle1:build
+hotel-bundle2-build:
+  only:
+    changes:
+      - components/hotel-module/bundle2/**/*
+  stage: build
+  script:
+    - ./gradlew :components:hotel-module:bundle2:build
+
+hotel-daily-check:
+  only:
+    changes:
+      - components/hotel-module/**/*
   stage: build
   script:
     - ./gradlew :components:hotel-module:main:fileCounter
@@ -26,7 +42,24 @@ hotelDailyCheck:
 #  script:
 #    - ./gradlew -Pci --console=plain :app:testDebug
 
-#deploy2Maven:
-#  stage: deploy
-#  script:
-#    - ./gradlew :app:appDistributionUploadRelease
+hotel-bundle1-deploy:
+  only:
+    changes:
+      - components/hotel-module/bundle1/**/*
+  stage: deploy
+  script:
+    - ./gradlew :components:hotel-module:bundle1:publishToMavenLocal
+hotel-bundle2-deploy:
+  only:
+    changes:
+      - components/hotel-module/bundle2/**/*
+  stage: deploy
+  script:
+    - ./gradlew :components:hotel-module:bundle2:publishToMavenLocal
+hotel-foundation-deploy:
+  only:
+    changes:
+      - components/hotel-module/foundation/**/*
+  stage: deploy
+  script:
+    - ./gradlew :components:hotel-module:foundation:publishToMavenLocal
