--- a/.gitlab-ci-myhome.yml
+++ b/.gitlab-ci-myhome.yml
@@ -1,8 +1,8 @@
-home-myhome:
+home-myhome-build:
   only:
     changes:
-      - components/home-module/myhome/*.{java,kt,xml,gradle}
-      - /components/home-module/myhome/**/*
+#      - components/home-module/myhome/*.{java,kt,xml,gradle}
+      - components/home-module/myhome/**/*
   stage: build
   script:
     - ./gradlew :components:home-module:myhome:build
@@ -10,7 +10,7 @@ home-myhome:
 home-daily-check:
   only:
     changes:
-      - /components/home-module/myhome/**/*
+      - components/home-module/myhome/**/*
   stage: build
   script:
     - ./gradlew :components:hotel-module:main:fileCounter
@@ -21,7 +21,7 @@ home-daily-check:
 #  script:
 #    - ./gradlew -Pci --console=plain :app:testDebug
 
-home-deploy:
+home-myhome-deploy:
   only:
     changes:
       - components/home-module/myhome/**/*
